--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -1,19 +1,79 @@
-name: Metrics
+name: GitHub Metrics
+
 on:
-  # Schedule daily updates
-  schedule: [{cron: "0 0 * * *"}]
-  # (optional) Run workflow manually
+  # Schedule updates (daily at midnight UTC)
+  schedule:
+    - cron: "0 0 * * *"
+
+  # Allow manual triggering of the workflow
   workflow_dispatch:
-  # (optional) Run workflow when pushing on master/main
-  push: {branches: ["master", "main"]}
+
+  # Trigger the workflow on pushes to the main branch
+  push:
+    branches:
+      - main
+
 jobs:
   github-metrics:
     runs-on: ubuntu-latest
-    environment: 
-      name: production
+    environment: production
+
+    # Define minimal required permissions for security
     permissions:
-      contents: write
+      contents: read
+      issues: read
+      pull-requests: read
+      # Add other permissions if required by specific plugins
+
     steps:
-      - uses: lowlighter/metrics@latest
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 1  # Fetch only the latest commit for faster performance
+
+      - name: Fix Docker installation conflicts
+        run: |
+          sudo apt-get remove -y containerd docker.io containerd.io
+          sudo apt-get update
+          sudo apt-get install -y docker.io jq
+
+      - name: Generate GitHub Metrics
+        uses: lowlighter/metrics@v3.34  # Updated to the correct version
         with:
           token: ${{ secrets.METRICS_TOKEN }}
+          user: vem882
+          template: classic
+          base: header, activity, community, repositories, metadata
+          base_indepth: true
+          config_octicon: true
+          config_timezone: Europe/Helsinki
+          config_twemoji: true
+          plugin_languages: true
+          plugin_languages_analysis_timeout: 15
+          plugin_languages_analysis_timeout_repositories: 7.5
+          plugin_languages_categories: markup, programming
+          plugin_languages_colors: github
+          plugin_languages_indepth: true
+          plugin_languages_limit: 8
+          plugin_languages_other: true
+          plugin_languages_recent_categories: markup, programming
+          plugin_languages_recent_days: 30
+          plugin_languages_recent_load: 300
+          plugin_languages_sections: most-used
+          plugin_languages_threshold: 0%
+          plugin_leetcode: true
+          plugin_leetcode_limit_recent: 2
+          plugin_leetcode_limit_skills: 10
+          plugin_leetcode_sections: solved
+          plugin_leetcode_user: vem882
+        env:
+          GITHUB_TOKEN: ${{ secrets.METRICS_TOKEN }}
+
+      - name: Commit and Push Metrics
+        uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          commit_message: "📈 Update GitHub metrics [skip ci]"
+          branch: metrics  # Specify the branch where metrics are stored
+          file_pattern: './metrics/**'  # Adjust the path based on where metrics are generated
+        env:
+          GITHUB_TOKEN: ${{ secrets.METRICS_TOKEN }}
