--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -38,7 +38,7 @@ jobs:
           sudo apt-get install -y docker.io jq
 
       - name: Generate GitHub Metrics
-        uses: lowlighter/metrics@v3.34  # Updated to the correct version
+        uses: lowlighter/metrics@latest  # Updated to the correct version
         with:
           token: ${{ secrets.METRICS_TOKEN }}
           user: vem882
